re PR c++/8031 (ICE in comptypes, at cp/typeck.c:913)

PR C++/8031
* cvt.c (convert_to_pointer_force): Don't try comparing against
erronous type.

From-SVN: r60105