gcc/cp/cvt.c
@@ -313,6 +313,8 @@ convert_to_pointer_force (type, expr)
 	  if (binfo)
 	    {
 	      expr = build_base_path (code, expr, binfo, 0);
+	      if (expr == error_mark_node)
+		return error_mark_node;
 	      /* Add any qualifier conversions. */
 	      if (!same_type_p (TREE_TYPE (TREE_TYPE (expr)),
 				TREE_TYPE (type)))
